<resources>
    <string name="app_name">Gनी</string>


    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>


    <string name="sign_in_or_register">Sign in or Register</string>
    <string name="verify_number_layout_text">We need your number for Authentication.</string>
    <string name="creating_otp">Creating OTP</string>
    <string name="sending_otp_to_your_provider">Sending OTP to your provider</string>
    <string name="waiting_for_otp">Waiting for OTP</string>
    <string name="verifying_otp">Verifying OTP</string>
    <string name="verify_number_button_text">Verify Number</string>
    <string name="strEmailLoginRestriction">Foreigners kindly Register through EmailId</string>

    <string name="no_internet_available">No Internet Available</string>
    <string name="no_internet_connected">SEEMS YOU ARE NOT \nCONNECTED TO THE INTERNET</string>
    <string name="retry">Try Again</string>

    <string name="email_text">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="confirPassword">Confirm Password</string>
    <string name="password">Password</string>
    <string name="dob">Date Of Birth</string>
    <string name="relationship">Relationship</string>
    <string name="txt_login">Login</string>

</resources>
