<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/ic_medicalwale_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:fontFamily="@string/roboto_regular"
        android:gravity="center"
        android:text="@string/sign_in_or_register"
        android:textColor="#404547"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="@string/roboto_regular"
        android:gravity="center"
        android:text="@string/verify_number_layout_text"
        android:textColor="#768188" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:imeOptions="flagNoExtractUi"
        android:orientation="horizontal"
        android:paddingBottom="15dp">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            app:srcCompat="@drawable/flag_image_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="  +91"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etVerifyNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"
            android:textColor="@color/text_color"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnVerifyingOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:text="@string/verify_number_button_text"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Sign Up With Email ID"
        android:textColor="@color/colorAccent"
        android:background="@drawable/green_color_border_sharp"
        android:textAllCaps="false"
        android:layout_marginTop="8dp"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/strEmailLoginRestriction"
        android:textColor="@color/text_color"
        android:textStyle="italic"
        android:layout_marginTop="4dp"
        android:drawableRight="@color/colorAccent"
        android:textSize="12sp" />
    </RelativeLayout>


</LinearLayout>