<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frgment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:padding="@dimen/feed_item_margin"
        android:text="Step 1 of 3"
        android:textSize="@dimen/textSizeVerryLarge"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/getProfileImage"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_below="@+id/profileImage"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="21dp"
                    android:src="@mipmap/ic_launcher_round"/>

                <ImageView
                    android:id="@+id/selectProfileImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignBottom="@+id/getProfileImage"
                    android:layout_marginStart="-25dp"
                    android:layout_toEndOf="@+id/getProfileImage"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/healthwall_photo_video_icon" />

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="-35dp"
                    android:layout_toRightOf="@+id/getProfileImage"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/getProfileImage"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="15dp"
                    android:text="UPLOAD YOUR PROFILE PHOTO"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/mobile_number"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@drawable/login_rectangle_drawable"

                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_margin="12dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/mobile_iconn"
                    android:tint="@color/light_text_color" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/appointmentDivider" />

                <EditText
                    android:id="@+id/mobileEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@null"
                    android:hint="Mobile Number"
                    android:imeOptions="actionNext"

                    android:inputType="phone"
                    android:maxLength="10"
                    android:paddingLeft="20dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/full_name"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_rectangle_drawable"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_margin="12dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/name_iconn"
                    android:tint="@color/light_text_color" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/appointmentDivider" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@null"
                    android:hint="Name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:paddingLeft="20dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:id="@+id/tvEmailLabel"
                android:text="@string/email_text"
                android:visibility="visible"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_rectangle_drawable"
                android:gravity="center"
                android:id="@+id/llEmailLayout"
                android:visibility="visible"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_margin="12dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:tint="@color/light_text_color"
                    app:srcCompat="@drawable/email_iconn" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/appointmentDivider" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@null"
                    android:hint="Email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/dob"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/login_rectangle_drawable"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_margin="12dp"
                    android:tint="@color/light_text_color"
                    app:srcCompat="@drawable/callender_icon" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/appointmentDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2">

                        <EditText
                            android:id="@+id/etDay"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:digits="0123456789"
                            android:focusable="true"
                            android:gravity="center"
                            android:hint="dd"
                            android:inputType="phone"
                            android:maxLength="2"
                            android:textSize="18dp" />

                        <TextView
                            android:layout_width="10dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:text="/"
                            android:textSize="20dp" />

                        <EditText
                            android:id="@+id/etMonth"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:digits="0123456789"
                            android:focusable="false"
                            android:gravity="center"
                            android:hint="mm"
                            android:inputType="phone"
                            android:maxLength="2"
                            android:textSize="18dp" />

                        <TextView
                            android:layout_width="10dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:text="/"
                            android:textSize="20dp" />

                        <EditText
                            android:id="@+id/etYear"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:digits="0123456789"
                            android:focusable="false"
                            android:gravity="center"
                            android:hint="yyyy"
                            android:inputType="phone"
                            android:maxLength="4"
                            android:textSize="18dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="Select Gender"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/maleFemaleLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <LinearLayout
                    android:id="@+id/maleLayout"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@color/received_message_bg_color"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivMale"
                        android:layout_width="33dp"
                        android:layout_height="33dp"
                        android:adjustViewBounds="true"
                        android:padding="5dp"
                        android:scaleType="centerInside"
                        android:tint="@color/white"
                        app:srcCompat="@drawable/child_male_icon" />

                    <TextView
                        android:id="@+id/tvMale"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center|start"
                        android:text="Male"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/femaleLayout"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivFemale"
                        android:layout_width="33dp"
                        android:layout_height="33dp"
                        android:adjustViewBounds="true"
                        android:padding="5dp"
                        android:scaleType="centerInside"
                        android:tint="@color/white"
                        app:srcCompat="@drawable/child_female_icon" />

                    <TextView
                        android:id="@+id/tvFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center|start"
                        android:text="Female"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/backButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="5"
                    android:background="@color/green"
                    android:stateListAnimator="@null"
                    android:text="BACK"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="5"
                    android:background="@color/green"
                    android:stateListAnimator="@null"
                    android:text="NEXT"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
